00-base/ingresses/grafana-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-svc-ingress
  namespace: monitoring
spec:
  selector:
    app: grafana
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: grafana
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana-svc-ingress
            port:
              number: 3000
