00-base/ingresses/longhorn-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: longhorn-svc-ingress
  namespace: longhorn-system
spec:
  selector:
    app: longhorn-ui
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  spec:
  ingressClassName: nginx
  rules:
  - host: longhorn  
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: longhorn-svc-ingress
              port: 
                number: 80
