00-base/ingresses/prometheus-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-svc-ingress
  namespace: monitoring
spec:
  selector:
    prometheus: prometheus-persistant
  ports:
    - name: web
      protocol: TCP
      port: 9090
      targetPort: web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: prometheus
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-svc-ingress
            port:
              number: 9090
